service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecr-service
spec:
  selector:
    app: ecr-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
